updated language and config.json

--- a/locales/sq-AL.json
+++ b/locales/sq-AL.json
@@ -1,7 +1,7 @@
 {
     "app": {
         "powered_by_ushahidi": "Powered by Ushahidi.",
-        "support": "Ushahidi Support",
+        "support": "LAM-TECH Support",
         "by": "nga",
         "submit": "Prano",
         "submitting": "Submitting",
