--- a/locales/de.json
+++ b/locales/de.json
@@ -1,7 +1,7 @@
 {
     "app": {
         "powered_by_ushahidi": "Powered by Ushahidi.",
-        "support": "Ushahidi Support",
+        "support": "LAM-TECH Support",
         "by": "nach",
         "submit": "Absenden",
         "submitting": "Submitting",
